--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RssFeed</string>
     <string name="feed_results">feed_results</string>
+    <string name="feed_error">feed_error</string>
 </resources>
